# iode

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTE.md  README.md  compare_debug_files.py  copy_iode_package.py  create_patched_version.py  dirs.mak  generate_stub_files.py.in  iode.sln  makepy.bat  makepy_all.bat  pyproject.toml.in  pyproject_backup.toml.in  set32.bat  set64.bat
api/: BUF.C  B_BASEV.C  B_DIR.C  B_DS.C  B_EST.C  B_FCOPY.C  B_FDEL.C  B_FILE.C  B_HTOL.C  B_IDT.C  B_LTOH.C  B_PROF.C  B_README.C  B_SEASON.C  B_VIEW.C  B_XODE.C  CMakeLists.txt  CONVERSIONS.md  C_CALC.C  C_CC.C  DEBUG.H  DESCRIPTION.md  ESTIM.md  E_ERROR.C  E_ERRORV.C  E_PREP.C  E_PRINT.C  E_STAT.C  E_STEP.C  E_TESTS.C  IDENTITIES.md  IODEPRO.H  IODEVARG.H  K_CCCMT.C  K_CCIDT.C  K_CCLST.C  K_CCSCL.C  K_CCTBL.C  K_CCVAR.C  K_CMP.C  (+207 more)
api/ascii/: CMakeLists.txt  ascii.h  k_ccall.c  k_ccall.cpp  k_cccmt.c  k_cccmt.cpp  k_cceqs.c  k_cceqs.cpp  k_ccidt.c  k_ccidt.cpp  k_cclst.c  k_cclst.cpp  k_ccscl.c  k_ccscl.cpp  k_cctbl.c  k_cctbl.cpp  k_ccvar.c  k_ccvar.cpp
api/bc32/: makefile
api/conversion/: CMakeLists.txt  dif.h  export.h  import.h  k_ecsv.c  k_ecsv.cpp  k_edif.c  k_edif.cpp  k_emain.c  k_emain.cpp  k_etsp.c  k_etsp.cpp  k_ewks.c  k_ewks.cpp  k_iasc.c  k_iasc.cpp  k_ibst.c  k_ibst.cpp  k_idif.c  k_idif.cpp  k_igem.c  k_igem.cpp  k_imain.c  k_imain.cpp  k_inis.c  k_inis.cpp  k_iprn.c  k_iprn.cpp  k_irasc.c  k_irasc.cpp  k_itxt.c  k_itxt.cpp  k_rules.c  k_rules.cpp  k_wks.c  k_wks.cpp
api/estimation/: CMakeLists.txt  e_dftest.c  e_dftest.cpp  e_error.c  e_error.cpp  e_est.c  e_est.cpp  e_prep.c  e_prep.cpp  e_print.c  e_print.cpp  e_step.c  e_step.cpp  e_tests.c  e_tests.cpp  estimation.h  k_est.c  k_est.cpp
api/gsample/: CMakeLists.txt  c_calc.c  c_calc.cpp  c_cc.c  c_cc.cpp  gsample.h
api/io/: export.h  import.h  k_ecsv.cpp  k_edif.cpp  k_emain.cpp  k_etsp.cpp  k_ewks.cpp  k_iasc.cpp  k_ibst.cpp  k_idif.cpp  k_igem.cpp  k_imain.cpp  k_inis.cpp  k_iprn.cpp  k_irasc.cpp  k_itxt.cpp  k_rules.cpp  k_wks.cpp
api/lec/: CMakeLists.txt  k_lec.c  k_lec.cpp  l_alloc.c  l_cc1.c  l_cc1.cpp  l_cc2.c  l_cc2.cpp  l_common.h  l_compile.cpp  l_debug.c  l_eqs.c  l_eqs.cpp  l_err.c  l_err.cpp  l_err.h  l_exec.c  l_exec.cpp  l_exec_fns.c  l_exec_fns.cpp  l_exec_fns.h  l_exec_mtfn.c  l_exec_mtfn.cpp  l_exec_mtfn.h  l_exec_ops.c  l_exec_ops.cpp  l_exec_ops.h  l_exec_tfn.c  l_exec_tfn.cpp  l_exec_tfn.h  l_exec_val.c  l_exec_val.cpp  l_exec_val.h  l_hodrick.c  l_hodrick.cpp  l_link.c  l_link.cpp  l_newton.c  l_newton.cpp  l_secant.c  (+6 more)
api/objs/: CMakeLists.txt  comments.h  compare.h  equations.h  grep.h  identities.h  k_cmp.c  k_cmp.cpp  k_cmt.cpp  k_eqs.c  k_eqs.cpp  k_grep.c  k_grep.cpp  k_idt.cpp  k_kdb.c  k_kdb.cpp  k_lec.c  k_lst.c  k_lst.cpp  k_objfile.c  k_objfile.cpp  k_objs.c  k_objs.cpp  k_objsv.c  k_objsv.cpp  k_objvers.c  k_objvers.cpp  k_pack.c  k_pack.cpp  k_scl.cpp  k_tbl.c  k_tbl.cpp  k_val.c  k_val.cpp  k_vers.c  k_vers.cpp  k_ws.c  k_ws.cpp  k_wsvar.c  k_wsvar.cpp  (+18 more)
archives/: CMakeLists.txt  iode.msg  iode_presentation.txt  readme.htm
cmd/: CMakeLists.txt  ex.ansi  iodecmd.c  iodecmd.cpp  k_errorv.c  macros.mak  makefile  mk.bat  resfun.rep  s_iode.c  sb_gui.c  testapi.rep  unittests.bat  unittestsbc32.bat  unittestsvc32.bat
cpp_api/: CMakeLists.txt  Simulation.cpp  Simulation.h  common.h  cpp_api.cpp  cpp_api.h  equation.cpp  equation.h  iode_cpp_api.cpp  iode_cpp_api.h  iode_exceptions.h  period.h  sample.h  super.cpp  super.h  table.cpp  table.h  utils.h
doc/: A2M.M  ALGO.M  APL.M  CMakeLists.txt  DATA.M  DBOUT.M  DEMO.M1  DS.M  EXTL.M1  FILETYPE.M1  FORMAT.M  IODE.M  IODEW95.M  LEXIQUE.M  LICENCE.M  LICENCE.M1  OBJS.M  PREREQ.M1  QODE.M  REFMAN.M  REPMAN.M1  REPORT.M  RTF.M  SQL.M  START3.M  SUPPORT.M  SYNTAX.M  S_A2MSYN.M  compute.m  environment.yml  extract_text_from_pdf.py  fiml.m  makeall.bat  makechm.bat  makedev.bat  makefile  makemif.bat  makereadme.bat  makewiki.bat  mif2s-data.bat  (+13 more)
gui/: CMakeLists.txt  MANIFEST.in  Makefile  Makefile.Debug  Makefile.Release  README.md  abstract_main_window.py  bridge.h  build_gui.bat  convert_ui_files_to_py.py  get_all_connections.py  graph.cpp  graph.h  graph.ui  gui.cpp  gui.h  gui.vcxproj  gui.vcxproj.filters  gui_iode.pro  main.cpp  main.py  main_window.cpp  main_window.h  main_window.py  main_window.ui  main_window_abstract.cpp  main_window_abstract.h  main_window_plot.cpp  main_window_plot.h  py_super.cpp  py_super.h  pyproject.toml.in  resource.h  run_test_gui.py  run_test_view_workspace.py  settings.cpp  settings.h  settings.py  super.cpp  super.h  (+5 more)
pyiode/: CMakeLists.txt  PYIODE.md  __init__.pxd  _cdef.pxd  _cdef.pyx  a2m_print.cpp  a2m_print.pxd  a2m_print.pyx  b_api.c  cli.cpp  cli.pxd  cli.pyx  common.pxd  common.pyx  common.pyx.in  conftest.py  crvars.rep  cythonize_iode.py  cythonize_iode.py.in  data.pyx  estim.pyx  exec.pyx  iode.c  iode.pxi  iode.pyx  iode_cython.pxd  iode_cython.pyx  iode_for_py.py  iode_python.pxd  iode_python.pxi  iode_python.pyx  lec.pxd  lec.pyx  makepy.bat  model.pyx  objs.pxd  objs.pyx  period.pyx  py_update_pyx_file.py  pyiode_cdef.pxd  (+49 more)
python_api/: CMakeLists.txt  py_constants.cpp  py_numpy.h  py_objs.cpp  py_objs.h  py_sample.h  py_ws.cpp  py_ws.h  pyiode.cpp
scr4/: CMakeLists.txt  macros.mak  oem_to_utf8.py  s_a2m.h  s_a2mcsv.c  s_a2mdok.c  s_a2memf.c  s_a2merr.c  s_a2mfrg.c  s_a2mfrm.c  s_a2mgdi.c  s_a2mgif.c  s_a2mgr1.c  s_a2mgrf.c  s_a2mhtm.c  s_a2mmd.c  s_a2mmem.c  s_a2mmsg.c  s_a2mrd.c  s_a2mrtf.c  s_a2mseg.c  s_a2mswf.c  s_a2mtc2.c  s_a2mtch.c  s_abhlp.c  s_acerr.c  s_acheck.c  s_achkac.c  s_achkin.c  s_act.c  s_actbc.c  s_actcr.c  s_actis.c  s_aerr.c  s_aexec.c  s_aexp.c  s_aexps.c  s_aexpsd.c  s_aiexp.c  s_ainit.c  (+492 more)
tests/: CMakeLists.txt  api.cpp  api.h  borland_to_google_test.py  convert_tests.sh  example.csv.rep  exedir.txt  fun.cmt  fun.idt  generate_big_vars_ws.py  iode.groups.md  test1.c  test1cpp.cpp  testall.bat  testapi.rep  testrtf.rep  tests.cpp  tests.h  unittests.bat  unittestsbc32.bat  unittestsvc32.bat
(+1817 files in other folders)
